# Kasane-logic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  README.md  README_JA.md  voxels.txt
.github/workflows/: benchmark.yml
benches/: id_new.rs
benchmark_history/: Complement.md  Equality.md  Intersection.md  Symmetric Difference.md  Union.md  insert.md
src/: lib.rs  main.rs
src/function/: line.rs  mod.rs  triangle.rs
src/function/ecef/: ecef_to_id.rs  ecef_to_point.rs  mod.rs  point_to_ecef.rs
src/function/tools/: ecef_to_id.rs  ecef_to_point.rs  point_to_ecef.rs  point_to_id.rs
src/id/: center.rs  change_scale.rs  complement.rs  contain.rs  coordinates.rs  mod.rs  points.rs  pure.rs  relation.rs  scale.rs  to_pure.rs  value.rs  vertex.rs  with.rs  z_range.rs
src/map/: insert.rs  iter.rs  mod.rs
src/set/: and.rs  equal.rs  from_hash.rs  insert.rs  mod.rs  not.rs  or.rs  pure.rs  to_pure.rs  xor.rs
src/tests/: mod.rs  test_complement.rs  test_debug.rs  test_dimension_range.rs  test_equality.rs  test_map.rs  test_points.rs  test_set_operations.rs  test_spacetime_id.rs  test_spacetime_id_set.rs
