[package]
name = "kasane-logic"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0.141"
schemars = "1.0.4"
chrono = "0.4.41"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name="id_new"
harness = false

[features]
default = []
serde_support = ["serde"]
