[package]
name = "kasane-logic"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"

[features]
default = ["full"]     # デフォルトはネイティブ
full = ["rayon", "serde_support"]
wasm = ["serde_support"]
serde_support = ["serde"]

[dependencies]
serde_json = "1.0.141"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name="id_new"
harness = false


[profile.dev]
overflow-checks = false  # これが有効だとオーバーフローでパニックする

[profile.release]
overflow-checks = false # リリースビルドでは通常無効