[package]
name = "kasane-logic"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "This is Kasane-logic"

[features]
default = ["full"]     # デフォルトはネイティブ
full = ["rayon", "serde_support"]
wasm = ["serde_support"]
serde_support = ["serde"]

[dependencies]
serde_json = "1.0.141"
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.11.0", optional = true }
chrono = "0.4.41"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name="id_new"
harness = false


[features]
default = []
serde_support = ["serde"]
